@@ -86,7 +86,7 @@ extern "C" {
     /* pdfgen.c */
     __attribute__ ((format(printf, 2, 3)))
     extern void pdf_printf(PDF, const char *fmt, ...);
-    extern void pdf_begin_obj(PDF, int, bool);
+    extern void pdf_begin_obj(PDF, int, int);
     extern void pdf_end_obj(PDF);
     extern void pdf_begin_stream(PDF);
     extern void pdf_end_stream(PDF);
